# cmake_tutorial

./: .gitignore  CMakeLists.txt  README.md  main.cpp
TestCore/: CMakeLists.txt  test.h
TestCore/src/: test.cpp
